# sandboxer

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  install.sh  pyproject.toml
src/sandboxer/: __init__.py  cli.py  container.py
tests/: __init__.py  test_integration.py
